force-app/main/default/objects/DepositACBal__c/DepositACBal__c.object-meta.xml
<CustomObject>
    <label>Deposit+A/C Bal</label>
    <nameField>
        <displayFormat>DPAC-{000000}</displayFormat>
        <label>DEPOSIT+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>