force-app/main/default/objects/DepositACBal__c/fields/ACBalAccountID__c.field-meta.xml
<CustomField>
    <fullName>ACBalAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A/C BAL Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DEPOSIT+A/C BAL</relationshipLabel>
    <relationshipName>DepositACBalAccountID</relationshipName>
    <type>Lookup</type>
</CustomField>