force-app/main/default/objects/DepositACBal__c/fields/ACBalID__c.field-meta.xml
<CustomField>
    <fullName>ACBalID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>ACBalance__c</referenceTo>
    <relationshipLabel>DEPOSIT+A/C BAL</relationshipLabel>
    <relationshipName>DepositACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>