force-app/main/default/objects/DepositACBal__c/fields/ACBalRollUpStatus__c.field-meta.xml
<CustomField>
    <fullName>ACBalRollUpStatus__c</fullName>
    <label>A/C BALANCE ROLLUP STATUS c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>