force-app/main/default/objects/DepositACBal__c/fields/AmountPaidLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocalACBal__c</fullName>
    <label>AMOUNT PAID(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>