force-app/main/default/objects/DepositACBal__c/fields/AmountPaidLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocalFormu__c</fullName>
    <formula>DepositID__r.AmountPaidToVendorLocal__c</formula>
    <label>AMOUNT PAID(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>