force-app/main/default/objects/DepositACBal__c/fields/AmountPaidUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidUSDACBal__c</fullName>
    <label>AMOUNT PAID(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>