force-app/main/default/objects/DepositACBal__c/fields/AmountReceivedLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalFormu__c</fullName>
    <formula>DepositID__r.AmountReceivedFromCustomerLocal__c</formula>
    <label>AMOUNT RECEIVED(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>