force-app/main/default/objects/DepositACBal__c/fields/AmountReceivedUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedUSDACBal__c</fullName>
    <label>AMOUNT RECEIVED(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>