force-app/main/default/objects/DepositACBal__c/fields/AmountReceivedUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedUSDFormu__c</fullName>
    <formula>DepositID__r.AmountReceivedFromCustomerUSD__c</formula>
    <label>AMOUNT RECEIVED(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>