force-app/main/default/objects/DepositACBal__c/fields/DepositID__c.field-meta.xml
<CustomField>
    <fullName>DepositID__c</fullName>
    <label>DEPOSIT ID</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>DEPOSIT+A/C BAL</relationshipLabel>
    <relationshipName>DepositACBal</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>